# ci_simulator

./: CMakeLists.txt  README.md
build-static/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ci_rt_sim.vcxproj  ci_rt_sim.vcxproj.filters  ci_rt_simulator.sln  cmake_install.cmake
build-static/ci_rt_sim.dir/Release/: ci_rt_sim.exe.recipe
build-static/ci_rt_sim.dir/Release/ci_rt_sim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-static/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-static/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-static/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-static/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ref/: CI_synthesizer.m  Exponential Practice.m  SpeechProcessor.m  normalize_speech_signal.m  speech_spectrogram_practice.m
scripts/: build_and_run_mac.sh  build_and_run_windows.bat  build_portable_windows.bat
src/: audio_io.cpp  audio_io.h  biquad.h  ci_processor.cpp  ci_processor.h  filters.h  main.cpp
